[package]
name = "serde-pyobject"
version = "0.6.1"
edition = "2021"

description = "PyO3's PyAny as a serde data format"
documentation = "https://docs.rs/serde-pyobject/"
repository = "https://github.com/Jij-Inc/serde-pyobject"
keywords = ["serde", "pyo3", "python", "ffi"]
license = "MIT OR Apache-2.0"

[dependencies]
pyo3 = "0.23.0"
serde = "1.0.190"
once_cell = { version = ">=1.21", optional = true }

[dev-dependencies]
maplit = "1.0.2"
pyo3 = { version = "0.23.0", features = ["auto-initialize"] }
serde = { version = "1.0.190", features = ["derive"] }
serde_json = "1.0.108"

[features]
default = ["dataclass_support", "pydantic_support"]
abi3-py38 = ["pyo3/abi3-py38"]
dataclass_support = ["dep:once_cell"]
pydantic_support = ["dep:once_cell"]
