[package]
name = "serde-pyobject"
version = "0.7.1"
edition = "2021"

description = "PyO3's PyAny as a serde data format"
documentation = "https://docs.rs/serde-pyobject/"
repository = "https://github.com/Jij-Inc/serde-pyobject"
keywords = ["serde", "pyo3", "python", "ffi"]
license = "MIT OR Apache-2.0"

[dependencies]
once_cell = ">=1.21"
pyo3 = ">=0.26.0"
serde = "1.0.228"

[dev-dependencies]
maplit = "1.0.2"
pyo3 = { version = ">=0.26.0", features = ["auto-initialize"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"

[features]
default = []
abi3-py38 = ["pyo3/abi3-py38"]
